--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,27 +1,36 @@
-name: Deploy to GitHub Pages
+name: Node.js CI with Yarn
 
 on:
   push:
-    branches: [ main ]
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
-  deploy:
+  build:
+
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [18.x, 20.x, 22.x]
+        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
+
+    - name: Set up Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v4
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'yarn'
 
     - name: Install dependencies
-      run: npm install
+      run: yarn install
 
-    - name: Build and export
-      run: |
-        npm run build
-        npx next export
+    - name: Build project
+      run: yarn build
 
-    - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v3
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./out
+    - name: Run tests
+      run: yarn test
