--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,34 +1,34 @@
-name: Node.js CI with Yarn
+name: CI/CD
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ master ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ master ]
 
 jobs:
   build:
 
     runs-on: ubuntu-latest
 
-    
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+    strategy:
+      matrix:
+        node-version: [12.x]
 
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v4
+      uses: actions/checkout@v2
 
     - name: Set up Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v4
+      uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-        cache: 'yarn'
 
     - name: Install dependencies
-      run: yarn install
+      run: npm install
 
-    - name: Build project
-      run: yarn build
+    - name: Run the tests
+      run: npm test
 
-    - name: Run tests
-      run: yarn test
+    - name: Build
+      run: npm run build
